# LlamaRec

./: DATASET.md  README.md  config.py  environment.yml  experiments.sh  pyproject.toml  train_ranker.py  train_retriever.py
dataloader/: __init__.py  llm.py  lru.py  sas.py
datasets/: beauty.py  games.py  ml_100k.py  utils.py
model/: __init__.py  llm.py  sasrec.py
trainer/: __init__.py  base.py  llm.py  loggers.py  sasrec.py  utils.py
