[tool.poetry]
name = "llamarec"
version = "0.1.0"
description = ""
authors = ["adrixo <avalera@hpe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wandb = "^0.16.6"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.40.1"
pandas = "^2.2.2"
sentencepiece = "^0.2.0"
yacs = "^0.1.8"
bitsandbytes = "0.41.1"
pytorch-lightning = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
